# OTUS_1_1_Helloworld

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build_number.cmake  lib.h  main.cpp  test_version.cpp
gtest/: CMakeCache.txt
